--- a/examples/share/folder_file_link/pom.xml
+++ b/examples/share/folder_file_link/pom.xml
@@ -5,7 +5,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>cloud.pangeacyber.examples</groupId>
-  <artifactId>share</artifactId>
+  <artifactId>share_folder_file_link</artifactId>
   <version>1.0.0</version>
 
   <properties>
