--- a/examples/.examples-ci.yml
+++ b/examples/.examples-ci.yml
@@ -50,17 +50,18 @@ examples:
           - redact/redact_multiconfig
           - redact/structured
           - redact/text
+          - share/folder_create_and_delete
+          - share/folder_file_link
+          - share/item_life_cycle
+          - share/put_split_upload
+          - share/put_transfer_method_multipart
+          - share/put_transfer_method_post_url
           - vault/encrypt
           - vault/encrypt_structured
           - vault/rotate
           - vault/sign
           - audit/log_bulk_async_with_vault
           - vault/get
-          # - share/folder_create_and_delete
-          # - share/item_life_cycle
-          # - share/put_split_upload
-          # - share/put_transfer_method_multipart
-          # - share/put_transfer_method_post_url
 
   image: maven:3.9.6-eclipse-temurin-${JAVA_VERSION}
   before_script:
@@ -79,6 +80,7 @@ examples:
     - export PANGEA_REDACT_CONFIG_ID="$(eval echo \$PANGEA_REDACT_CONFIG_ID_1_LVE_AWS)"
     - export PANGEA_REDACT_MULTICONFIG_TOKEN="$(eval echo \$PANGEA_INTEGRATION_MULTI_CONFIG_TOKEN_LVE_AWS)"
     - export PANGEA_REDACT_TOKEN="$(eval echo \$PANGEA_INTEGRATION_TOKEN_LVE_AWS)"
+    - export PANGEA_SHARE_TOKEN="$(eval echo \$PANGEA_INTEGRATION_TOKEN_LVE_AWS)"
     - export PANGEA_URL_INTEL_TOKEN="$(eval echo \$PANGEA_INTEGRATION_TOKEN_LVE_AWS)"
     - export PANGEA_USER_INTEL_TOKEN="$(eval echo \$PANGEA_INTEGRATION_TOKEN_LVE_AWS)"
     - export PANGEA_VAULT_TOKEN="$(eval echo \$PANGEA_INTEGRATION_TOKEN_LVE_AWS)"
