--- a/packages/pangea-sdk/.sdk-ci.yml
+++ b/packages/pangea-sdk/.sdk-ci.yml
@@ -42,6 +42,7 @@ sdk-integration-tests:
     # Config IDs
     - export PANGEA_AUDIT_CONFIG_ID_1_${ENV}="$(eval echo \$PANGEA_AUDIT_CONFIG_ID_1_${ENV}_${CLOUD})"
     - export PANGEA_AUDIT_CONFIG_ID_2_${ENV}="$(eval echo \$PANGEA_AUDIT_CONFIG_ID_2_${ENV}_${CLOUD})"
+    - export PANGEA_AUDIT_CONFIG_ID_3_${ENV}="$(eval echo \$PANGEA_AUDIT_CONFIG_ID_3_${ENV}_${CLOUD})"
     - export PANGEA_REDACT_CONFIG_ID_1_${ENV}="$(eval echo \$PANGEA_REDACT_CONFIG_ID_1_${ENV}_${CLOUD})"
     - export PANGEA_REDACT_CONFIG_ID_2_${ENV}="$(eval echo \$PANGEA_REDACT_CONFIG_ID_2_${ENV}_${CLOUD})"
 
@@ -83,11 +84,11 @@ sdk-integration-tests:
         ENV: ${SERVICE_VAULT_ENV}
         TEST: ITVaultTest
   rules:
-    - if: $CI_COMMIT_BRANCH && '$CLOUD == "GCP" && $TEST == "ITFileScanTest"'
+    - if: '$CI_COMMIT_BRANCH && $CLOUD == "GCP" && $TEST == "ITFileScanTest"'
       allow_failure: true
-    - if: $CI_COMMIT_BRANCH && '$CLOUD == "GCP" && $TEST != "ITFileScanTest"'
+    - if: '$CI_COMMIT_BRANCH && $CLOUD == "GCP" && $TEST != "ITFileScanTest"'
       allow_failure: false
-    - if: $CI_COMMIT_BRANCH && '$CLOUD != "GCP"'
+    - if: '$CI_COMMIT_BRANCH && $CLOUD != "GCP"'
       allow_failure: false
   script:
     - mvn $MAVEN_CLI_OPTS test -Dtest=${TEST}
