--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -59,6 +59,27 @@ jobs:
           distribution: microsoft
           java-version: 21
 
+  docs:
+    needs: [prefetch]
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./packages/pangea-sdk
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4.1.7
+
+      - name: Setup Java
+        uses: actions/setup-java@v4.2.1
+        with:
+          distribution: microsoft
+          java-version: 21
+          cache: maven
+          cache-dependency-path: ./packages/pangea-sdk/pom.xml
+
+      - name: Generate docs
+        run: mvn javadoc:javadoc
+
   test-unit:
     needs: [prefetch]
     runs-on: ubuntu-latest
