Add option to validate Audit events before sending them (PAN-16602)
When building an `AuditClient`, users can now enable schema validation
of all events sent through the client via `withSchemaValidation(true)`.
When enabled, the client will fetch (and cache) the event schema from
the OpenAPI spec and validate all events against it before sending them.
When bulk logging events, the validation ends at the first event that
fails validation.

--- a/packages/pangea-sdk/pom.xml
+++ b/packages/pangea-sdk/pom.xml
@@ -114,6 +114,16 @@
       <artifactId>httpclient</artifactId>
       <version>4.5.14</version>
     </dependency>
+    <dependency>
+      <groupId>io.swagger.parser.v3</groupId>
+      <artifactId>swagger-parser</artifactId>
+      <version>2.1.22</version>
+    </dependency>
+    <dependency>
+      <groupId>com.networknt</groupId>
+      <artifactId>json-schema-validator</artifactId>
+      <version>1.5.1</version>
+    </dependency>
 
     <!-- Testing -->
     <dependency>
