fixup! remove GCP tests for the guards

--- a/packages/pangea-sdk/.sdk-ci.yml
+++ b/packages/pangea-sdk/.sdk-ci.yml
@@ -64,8 +64,8 @@ sdk-integration-tests:
       - CLOUD: [AWS, GCP]
         ENV: ${SERVICE_AUTHZ_ENV}
         TEST: ITAuthZTest
-      - CLOUD: [AWS, GCP]
-        ENV: ${SERVICE_EMBARGO_ENV}
+      - CLOUD: [AWS]
+        ENV: ${SERVICE_DATA_GUARD_ENV}
         TEST: ITDataGuardTest
       - CLOUD: [AWS, GCP]
         ENV: ${SERVICE_EMBARGO_ENV}
@@ -88,8 +88,8 @@ sdk-integration-tests:
       - CLOUD: [AWS, GCP]
         ENV: ${SERVICE_FILE_SCAN_ENV}
         TEST: ITFileScanTest
-      - CLOUD: [AWS, GCP]
-        ENV: ${SERVICE_EMBARGO_ENV}
+      - CLOUD: [AWS]
+        ENV: ${SERVICE_PROMPT_GUARD_ENV}
         TEST: ITPromptGuardTest
       - CLOUD: [AWS, GCP]
         ENV: ${SERVICE_REDACT_ENV}
