fixup! test guards against dev

--- a/packages/pangea-sdk/.sdk-ci.yml
+++ b/packages/pangea-sdk/.sdk-ci.yml
@@ -15,7 +15,7 @@ sdk-integration-tests:
   retry: 2
   variables:
   # Set each service test environment
-    SERVICE_AI_GUARD_ENV: LVE
+    SERVICE_AI_GUARD_ENV: DEV
     SERVICE_AUDIT_ENV: LVE
     SERVICE_AUTHN_ENV: LVE
     SERVICE_AUTHZ_ENV: LVE
@@ -26,7 +26,7 @@ sdk-integration-tests:
     SERVICE_URL_INTEL_ENV: LVE
     SERVICE_FILE_INTEL_ENV: LVE
     SERVICE_USER_INTEL_ENV: LVE
-    SERVICE_PROMPT_GUARD_ENV: LVE
+    SERVICE_PROMPT_GUARD_ENV: DEV
     SERVICE_REDACT_ENV: LVE
     SERVICE_SANITIZE_ENV: LVE
     SERVICE_VAULT_ENV: LVE
