--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,7 +30,7 @@ env:
 
 jobs:
   setup:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
 
     outputs:
       examples-matrix: ${{ steps.examples-matrix.outputs.examples-matrix }}
@@ -48,7 +48,7 @@ jobs:
         run: find . -type f -name 'pom.xml' -printf '%h\n' | cut -c 3- | sort -u | jq -cRrs '${{ env.JQ_FILTER }}' >> "$GITHUB_OUTPUT"
 
   prefetch:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     steps:
       - name: Checkout code
         uses: actions/checkout@v4.2.2
@@ -61,7 +61,7 @@ jobs:
 
   docs:
     needs: [prefetch]
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     defaults:
       run:
         working-directory: ./packages/pangea-sdk
@@ -82,7 +82,7 @@ jobs:
 
   test-unit:
     needs: [prefetch]
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     strategy:
       matrix:
         java-version: [11, 17, 21]
@@ -106,7 +106,7 @@ jobs:
 
   examples:
     needs: [setup, prefetch]
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     strategy:
       matrix:
         example: ${{ fromJSON(needs.setup.outputs.examples-matrix) }}
