--- a/packages/pangea-sdk/.sdk-ci.yml
+++ b/packages/pangea-sdk/.sdk-ci.yml
@@ -14,7 +14,9 @@ sdk-integration-tests:
   stage: integration_tests
   retry: 2
   variables:
-  # Set each service test environment
+    CLOUD: AWS
+
+    # Set each service test environment
     SERVICE_AI_GUARD_ENV: LVE
     SERVICE_AUDIT_ENV: LVE
     SERVICE_AUTHN_ENV: LVE
@@ -55,61 +57,38 @@ sdk-integration-tests:
 
   parallel:
     matrix:
-      - CLOUD: [AWS]
-        ENV: ${SERVICE_AI_GUARD_ENV}
+      - ENV: ${SERVICE_AI_GUARD_ENV}
         TEST: ITAIGuardTest
-      - CLOUD: [AWS, GCP]
-        ENV: ${SERVICE_AUDIT_ENV}
+      - ENV: ${SERVICE_AUDIT_ENV}
         TEST: ITAuditTest
-      - CLOUD: [AWS, GCP]
-        ENV: ${SERVICE_AUTHN_ENV}
+      - ENV: ${SERVICE_AUTHN_ENV}
         TEST: ITAuthNTest
-      - CLOUD: [AWS, GCP]
-        ENV: ${SERVICE_AUTHZ_ENV}
+      - ENV: ${SERVICE_AUTHZ_ENV}
         TEST: ITAuthZTest
-      - CLOUD: [AWS, GCP]
-        ENV: ${SERVICE_EMBARGO_ENV}
+      - ENV: ${SERVICE_EMBARGO_ENV}
         TEST: ITEmbargoTest
-      - CLOUD: [AWS, GCP]
-        ENV: ${SERVICE_DOMAIN_INTEL_ENV}
+      - ENV: ${SERVICE_DOMAIN_INTEL_ENV}
         TEST: ITDomainIntelTest
-      - CLOUD: [AWS, GCP]
-        ENV: ${SERVICE_IP_INTEL_ENV}
+      - ENV: ${SERVICE_IP_INTEL_ENV}
         TEST: ITIPIntelTest
-      - CLOUD: [AWS, GCP]
-        ENV: ${SERVICE_URL_INTEL_ENV}
+      - ENV: ${SERVICE_URL_INTEL_ENV}
         TEST: ITURLIntelTest
-      - CLOUD: [AWS, GCP]
-        ENV: ${SERVICE_USER_INTEL_ENV}
+      - ENV: ${SERVICE_USER_INTEL_ENV}
         TEST: ITUserIntelTest
-      - CLOUD: [AWS, GCP]
-        ENV: ${SERVICE_FILE_INTEL_ENV}
+      - ENV: ${SERVICE_FILE_INTEL_ENV}
         TEST: ITFileIntelTest
-      - CLOUD: [AWS, GCP]
-        ENV: ${SERVICE_FILE_SCAN_ENV}
+      - ENV: ${SERVICE_FILE_SCAN_ENV}
         TEST: ITFileScanTest
-      - CLOUD: [AWS]
-        ENV: ${SERVICE_PROMPT_GUARD_ENV}
+      - ENV: ${SERVICE_PROMPT_GUARD_ENV}
         TEST: ITPromptGuardTest
-      - CLOUD: [AWS, GCP]
-        ENV: ${SERVICE_REDACT_ENV}
+      - ENV: ${SERVICE_REDACT_ENV}
         TEST: ITRedactTest
-      - CLOUD: [AWS]
-        ENV: ${SERVICE_SANITIZE_ENV}
+      - ENV: ${SERVICE_SANITIZE_ENV}
         TEST: ITSanitizeTest
-      - CLOUD: [AWS]
-        ENV: ${SERVICE_SHARE_ENV}
+      - ENV: ${SERVICE_SHARE_ENV}
         TEST: ITShareTest
-      - CLOUD: [AWS, GCP]
-        ENV: ${SERVICE_VAULT_ENV}
+      - ENV: ${SERVICE_VAULT_ENV}
         TEST: ITVaultTest
-  rules:
-    - if: '$CI_COMMIT_BRANCH && $CLOUD == "GCP" && $TEST == "ITFileScanTest"'
-      allow_failure: true
-    - if: '$CI_COMMIT_BRANCH && $CLOUD == "GCP" && $TEST != "ITFileScanTest"'
-      allow_failure: false
-    - if: '$CI_COMMIT_BRANCH && $CLOUD != "GCP"'
-      allow_failure: false
   script:
     - mvn $MAVEN_CLI_OPTS test -Dtest=${TEST}
 
