--- a/examples/.examples-ci.yml
+++ b/examples/.examples-ci.yml
@@ -1,6 +1,26 @@
+variables:
+  MAVEN_OPTS: "-Dmaven.repo.local=${CI_PROJECT_DIR}/.m2/repository"
+
+pangea-sdk-install:
+  extends: .sdk-base
+  image: maven:3.9.9-eclipse-temurin-21
+  stage: install
+  cache:
+    key: maven-cache
+    paths:
+      - ${CI_PROJECT_DIR}/.m2/repository
+  script:
+    - mvn install -X -DskipTests -DskipITs
+
 examples:
   stage: examples
   retry: 2
+  needs:
+    - pangea-sdk-install
+  cache:
+    key: maven-cache
+    paths:
+      - ${CI_PROJECT_DIR}/.m2/repository
   parallel:
     matrix:
       - JAVA_VERSION: [21]
@@ -16,6 +36,7 @@ examples:
           - audit/search
           - authn/invite_actions
           - authn/user_actions
+          - authz/folder_user
           - embargo/ip_check
           - embargo/iso_check
           - file_scan/file_scan_async_crowdstrike
@@ -51,16 +72,21 @@ examples:
           - redact/redact_multiconfig
           - redact/structured
           - redact/text
-          # - share/folder_create_and_delete
-          # - share/item_life_cycle
-          # - share/put_split_upload
-          # - share/put_transfer_method_multipart
-          # - share/put_transfer_method_post_url
+          - sanitize/no_share
+          - sanitize/share
+          # - share/cli
+          - share/folder_create_and_delete
+          - share/folder_file_link
+          - share/item_life_cycle
+          - share/put_split_upload
+          - share/put_transfer_method_multipart
+          - share/put_transfer_method_post_url
           - vault/encrypt
           - vault/encrypt_structured
+          - vault/encrypt_transform
+          - vault/get
           - vault/rotate
           - vault/sign
-          - vault/get
   image: maven:3.9.9-eclipse-temurin-${JAVA_VERSION}
   before_script:
     - export PANGEA_AUDIT_CONFIG_ID="$(eval echo \$PANGEA_AUDIT_CONFIG_ID_1_LVE_AWS)"
@@ -79,12 +105,14 @@ examples:
     - export PANGEA_REDACT_CONFIG_ID="$(eval echo \$PANGEA_REDACT_CONFIG_ID_1_LVE_AWS)"
     - export PANGEA_REDACT_MULTICONFIG_TOKEN="$(eval echo \$PANGEA_INTEGRATION_MULTI_CONFIG_TOKEN_LVE_AWS)"
     - export PANGEA_REDACT_TOKEN="$(eval echo \$PANGEA_INTEGRATION_TOKEN_LVE_AWS)"
+    - export PANGEA_SANITIZE_TOKEN="$(eval echo \$PANGEA_INTEGRATION_TOKEN_LVE_AWS)"
+    - export PANGEA_SHARE_TOKEN="$(eval echo \$PANGEA_INTEGRATION_TOKEN_LVE_AWS)"
     - export PANGEA_URL_INTEL_TOKEN="$(eval echo \$PANGEA_INTEGRATION_TOKEN_LVE_AWS)"
     - export PANGEA_USER_INTEL_TOKEN="$(eval echo \$PANGEA_INTEGRATION_TOKEN_LVE_AWS)"
     - export PANGEA_VAULT_TOKEN="$(eval echo \$PANGEA_INTEGRATION_TOKEN_LVE_AWS)"
   script:
     - cd examples/${EXAMPLE}
-    - mvn -B compile
+    - mvn -X -B compile
     - mvn -B exec:java -Dexec.mainClass=cloud.pangeacyber.examples.App
   rules:
     - if: $CI_COMMIT_BRANCH
