--- a/packages/pangea-sdk/pom.xml
+++ b/packages/pangea-sdk/pom.xml
@@ -6,7 +6,7 @@
 
   <groupId>cloud.pangea</groupId>
   <artifactId>pangea-sdk</artifactId>
-  <version>5.1.0</version>
+  <version>5.2.0-beta-1</version>
   <packaging>jar</packaging>
 
   <name>cloud.pangea:pangea-sdk</name>
