Rename GitLab CI files

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,5 +10,5 @@ stages:
   - examples
 
 include:
-  - /examples/.examples-ci.yml
-  - /packages/pangea-sdk/.sdk-ci.yml
+  - /examples/.gitlab-ci.yml
+  - /packages/pangea-sdk/.gitlab-ci.yml
