--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,5 +1,8 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": ["local>pangeacyber/.github:renovate-config"],
+  "extends": [
+    "config:best-practices",
+    "local>pangeacyber/.github:renovate-config"
+  ],
   "ignorePaths": []
 }
